--- a/Application/Admin/View/Login/index.html
+++ b/Application/Admin/View/Login/index.html
@@ -3,7 +3,7 @@
 <html lang="en" class="bg-dark">
 <head>
     <meta charset="utf-8" />
-    <title>巨丰园林管理系统</title>
+    <title>山大艺道管理系统</title>
     <meta name="description" content="app, web app, responsive, admin dashboard, admin, flat, flat ui, ui kit, off screen nav" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="stylesheet" href="__PUBLIC__/css/app.v2.css" type="text/css" />
@@ -11,21 +11,21 @@
 </head>
 <body>
 <section id="content" class="m-t-lg wrapper-md animated fadeInDown">
-    <div class="container aside-xxl"> <a class="navbar-brand block" href="">巨丰园林后台管理系统</a>
+    <div class="container aside-xxl"> <a class="navbar-brand block" href="">山大艺道后台管理系统</a>
         <section class="panel panel-default m-t-lg bg-white">
-            <header class="panel-heading text-center"> <strong>巨丰园林后台管理系统</strong> </header>
+            <header class="panel-heading text-center"> <strong>山大艺道后台管理系统</strong> </header>
             <form action="{:U('Login/login')}" class="panel-body wrapper-lg" method="post">
                 <div class="form-group">
                     <label class="control-label">用户名</label>
-                    <input type="text" name="username" placeholder="请输入账号" class="form-control input-lg" value="{$qijiaxueche_username}">
+                    <input type="text" name="username" placeholder="请输入账号" class="form-control input-lg" value="{$shandayidao_username}">
                 </div>
                 <div class="form-group">
                     <label class="control-label">密码</label>
-                    <input type="password" name="password" placeholder="请输入密码" class="form-control input-lg" value="{$qijiaxueche_pwd}" >
+                    <input type="password" name="password" placeholder="请输入密码" class="form-control input-lg" value="{$shandayidao_pwd}" >
                 </div>
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox" id="remember_pwd" name="remember_pwd" value="1" <if condition="$qijiaxueche_pwd neq ''">checked</if> >
+                        <input type="checkbox" id="remember_pwd" name="remember_pwd" value="1" <if condition="$shandayidao_pwd neq ''">checked</if> >
                         <label for="remember_pwd" style="color:black">记住密码</label>
                     </label>
                 </div>
@@ -40,7 +40,7 @@
 <footer id="footer">
     <div class="text-center padder clearfix">
         <p> <small>
-            &copy; 2017 kaituo Inc</small> </p>
+            *Copyright 2018 Jiangharui</small> </p>
     </div>
 </footer>
 </body>
