100%,正在上线测试

--- a/Application/Admin/View/Content/articleList.html
+++ b/Application/Admin/View/Content/articleList.html
@@ -52,7 +52,7 @@
                     <td style="vertical-align: middle">
                         {$item.cate_name}
                     </td>
-                    <td style="vertical-align: middle">
+                    <td style="vertical-align: middle;max-width:300px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;">
                         {$item.title}
                     </td>
                     <td style="vertical-align: middle;max-width:300px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;">
