--- a/Application/Home/View/Index/company.html
+++ b/Application/Home/View/Index/company.html
@@ -6,9 +6,9 @@
 		      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>公司简介</title>
-		<script src='.__PUBLIC__/assets/js/public_fz.js'></script>
-		<link rel="stylesheet" href=".__PUBLIC__/assets/css/public_reset.css">
-		<link rel="stylesheet" href=".__PUBLIC__/assets/css/public_common.css">
+		<script src='__PUBLIC__/assets/js/public_fz.js'></script>
+		<link rel="stylesheet" href="__PUBLIC__/assets/css/public_reset.css">
+		<link rel="stylesheet" href="__PUBLIC__/assets/css/public_common.css">
 		<style>
 				.company{
 						font-size:0.26rem;
@@ -28,14 +28,14 @@
 		</style>
 </head>
 <body>
+<!--<div class='company_img'>-->
+		<!--<img src="__PUBLIC__/assets/images/company.png" alt="">-->
+<!--</div>-->
+<style>
+	p img{width: 100%!important;height: auto!important;}
+</style>
 <div class='company'>
-		公司主要产品：主要为企业提供网站策划，网站设计制作，网站推广优化等服务；销售业绩以及网络：为中小企业提供网站策划服务，先阶段主要面向全国。
-</div>
-<div class='company_img'>
-		<img src=".__PUBLIC__/assets/images/company.png" alt="">
-</div>
-<div class='company'>
-		公司主要产品：主要为企业提供网站策划，网站设计制作，网站推广优化等服务；销售业绩以及网络：为中小企业提供网站策划服务，先阶段主要面向全国。公司主要产品：主要为企业提供网站策划，网站设计制作，网站推广优化等服务；销售业绩以及网络：为中小企业提供网站策划服务，先阶段主要面向全国。
+	{$info.profile|htmlspecialchars_decode}
 </div>
 </body>
 </html>
