--- a/Application/Home/View/Index/visit.html
+++ b/Application/Home/View/Index/visit.html
@@ -6,9 +6,9 @@
 		      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>预约参观</title>
-		<script src='.__PUBLIC__/assets/js/public_fz.js'></script>
-		<link rel="stylesheet" href=".__PUBLIC__/assets/css/public_reset.css">
-		<link rel="stylesheet" href=".__PUBLIC__/assets/css/public_common.css">
+		<script src='__PUBLIC__/assets/js/public_fz.js'></script>
+		<link rel="stylesheet" href="__PUBLIC__/assets/css/public_reset.css">
+		<link rel="stylesheet" href="__PUBLIC__/assets/css/public_common.css">
 		<style>
 				.visit{
 						color: #FF7500;
@@ -39,7 +39,7 @@
 		2014年，一只小红薯诞生于湖南长沙，定位“中高端薯产品专卖开创品牌”。门店产品丰富，集中了薯产品所有能够标准化量产的产品，包括烤红薯、芝士番薯、蜜薯盒子、薯类酥品、薯泡芙等40多种产品。
 </div>
 <div class='visit_img'>
-		<img src=".__PUBLIC__/assets/images/visit.png" alt="">
+		<img src="__PUBLIC__/assets/images/visit.png" alt="">
 </div>
 </body>
 </html>
