--- a/Application/Home/View/Index/about.html
+++ b/Application/Home/View/Index/about.html
@@ -6,9 +6,9 @@
 		      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>关于我们</title>
-		<script src='.__PUBLIC__/assets/js/public_fz.js'></script>
-		<link rel="stylesheet" href=".__PUBLIC__/assets/css/public_reset.css">
-		<link rel="stylesheet" href=".__PUBLIC__/assets/css/public_common.css">
+		<script src='__PUBLIC__/assets/js/public_fz.js'></script>
+		<link rel="stylesheet" href="__PUBLIC__/assets/css/public_reset.css">
+		<link rel="stylesheet" href="__PUBLIC__/assets/css/public_common.css">
 		<style>
 				body,html{
 						background-color: #F3F5F7;
@@ -23,21 +23,21 @@
 		</style>
 </head>
 <body>
-<a href="company.html" class='a'>公司简介</a>
-<a href="address.html" class='a'>地理位置</a>
+<a href="{:U('Index/company')}" class='a'>公司简介</a>
+<a href="{:U('Index/address')}" class='a'>地理位置</a>
 <footer>
-		<a class='footer_item ' href='./index.html'>
-				<span><img src=".__PUBLIC__/assets/images/toutiao1.png" alt=""></span>
-				<span>艺道头条</span>
-		</a>
-		<a class='footer_item' href='release.html'>
-				<span><img src=".__PUBLIC__/assets/images/fabu1.png" alt=""></span>
-				<span>发布</span>
-		</a>
-		<a class='footer_item footer_active'>
-				<span><img src=".__PUBLIC__/assets/images/my.png" alt=""></span>
-				<span>关于我们</span>
-		</a>
+	<a class='footer_item' href="{:U('Index/index')}">
+		<span><img src="__PUBLIC__/assets/images/toutiao1.png" alt=""></span>
+		<span>{$cate_name.0}</span>
+	</a>
+	<a class='footer_item' href="{:U('Index/release')}">
+		<span><img src="__PUBLIC__/assets/images/fabu1.png" alt=""></span>
+		<span>发布</span>
+	</a>
+	<a class='footer_item footer_active' href="{:U('Index/about')}">
+		<span><img src="__PUBLIC__/assets/images/my.png" alt=""></span>
+		<span>关于我们</span>
+	</a>
 </footer>
 </body>
 </html>
