--- a/Application/Home/View/Index/detail.html
+++ b/Application/Home/View/Index/detail.html
@@ -6,9 +6,9 @@
 		      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>文章详情</title>
-		<script src='.__PUBLIC__/assets/js/public_fz.js'></script>
-		<link rel="stylesheet" href=".__PUBLIC__/assets/css/public_reset.css">
-		<link rel="stylesheet" href=".__PUBLIC__/assets/css/public_common.css">
+		<script src='__PUBLIC__/assets/js/public_fz.js'></script>
+		<link rel="stylesheet" href="__PUBLIC__/assets/css/public_reset.css">
+		<link rel="stylesheet" href="__PUBLIC__/assets/css/public_common.css">
 		<style>
 				.detail_title{
 						font-size:0.36rem;
@@ -33,6 +33,9 @@
 <body>
 <div class='detail_title'>{$info.title}</div>
 <div class='detail_time'>发表时间：{$info.create_time|date="Y-m-d H:i",###}</div>
+<style>
+	p img{width: 100%!important;height: auto!important;}
+</style>
 <div class='detail_content'>
 		{$info.content|htmlspecialchars_decode}
 </div>
