--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -5,53 +5,88 @@
 		<meta name="viewport"
 		      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>山西山大艺道孵化器管理有限公司</title>
-		<script src='.__PUBLIC__/assets/js/public_fz.js'></script>
-		<link rel="stylesheet" href=".__PUBLIC__/assets/css/public_reset.css">
-		<link rel="stylesheet" href=".__PUBLIC__/assets/css/public_common.css">
-		<link rel="stylesheet" href=".__PUBLIC__/assets/css/index.css">
+		<title>{$info.name}</title>
+		<script src='__PUBLIC__/assets/js/public_fz.js'></script>
+		<link rel="stylesheet" href="__PUBLIC__/assets/css/public_reset.css">
+		<link rel="stylesheet" href="__PUBLIC__/assets/css/public_common.css">
+		<link rel="stylesheet" href="__PUBLIC__/assets/css/index.css">
 </head>
 <body>
-<div class='header'>
-		<a href="javascript:void (0)" class='input_a'><span class='iconfont '><img src=".__PUBLIC__/assets/images/search.png" alt=""></span><span class='input'>请输入您要搜索的内容</span></a>
-		<div class='header_nav'>
-				<a href="{:U('Index/others')}">其他资讯</a>
-				<span class='logo'><img src=".__PUBLIC__/assets/images/logo.png" alt=""></span>
-				<a href='./jion.html'>已入住企业</a>
-		</div>
-</div>
-<div class='index_box'>
-	<foreach name="list" item="for">
-
-		<a class="index_item" href="{:U('Index/detail',array('id'=>$for['id']))}">
-			<div class='index_item_title'>{$for.title}</div>
-			<div class='index_item_imgs'>
-				<?php $cover_arr = unserialize($for['cover']);?>
-				<foreach name="cover_arr" item="item">
-					<div class='item_img'>
-						<img src="/{$item}" alt="">
-					</div>
-				</foreach>
+	<div class='header'>
+			<a href="javascript:void (0)" class='input_a'><span class='iconfont '><img src="__PUBLIC__/assets/images/search.png" alt=""></span><span class='input'>请输入您要搜索的内容</span></a>
+			<div class='header_nav'>
+					<a href="{:U('Index/others')}">{$cate_name.1}</a>
+					<span class='logo'><img src="__PUBLIC__/assets/images/logo.png" alt=""></span>
+					<a href={:U('Index/settledList')}>已入住企业</a>
 			</div>
-			<div class='read_person'>{$for.pv}人阅读</div>
-		</a>
+	</div>
+	<div class='index_box'>
+		<foreach name="list" item="for">
 
-	</foreach>
-</div>
-<footer>
-		<a class='footer_item footer_active' href='./index.html'>
-				<span><img src=".__PUBLIC__/assets/images/toutiao.png" alt=""></span>
-				<span>艺道头条</span>
-		</a>
-		<a class='footer_item' href='release.html'>
-				<span><img src=".__PUBLIC__/assets/images/fabu1.png" alt=""></span>
-				<span>发布</span>
-		</a>
-		<a class='footer_item' href='about.html'>
-				<span><img src=".__PUBLIC__/assets/images/my1.png" alt=""></span>
-				<span>关于我们</span>
-		</a>
-</footer>
+			<a class="index_item" href="{:U('Index/detail',array('id'=>$for['id']))}">
+				<div class='index_item_title'>{$for.title}</div>
+				<div class='index_item_imgs'>
+					<?php $cover_arr = unserialize($for['cover']);?>
+					<foreach name="cover_arr" item="item">
+						<div class='item_img'>
+							<img src="/{$item}" alt="">
+						</div>
+					</foreach>
+				</div>
+				<div class='read_person'>{$for.pv}人阅读</div>
+			</a>
+
+		</foreach>
+	</div>
+	<footer>
+			<a class='footer_item footer_active' href="{:U('Index/index')}">
+					<span><img src="__PUBLIC__/assets/images/toutiao.png" alt=""></span>
+					<span>{$cate_name.0}</span>
+			</a>
+			<a class='footer_item' href="{:U('Index/release')}">
+					<span><img src="__PUBLIC__/assets/images/fabu1.png" alt=""></span>
+					<span>发布</span>
+			</a>
+			<a class='footer_item' href="{:U('Index/about')}">
+					<span><img src="__PUBLIC__/assets/images/my1.png" alt=""></span>
+					<span>关于我们</span>
+			</a>
+	</footer>
 </body>
 </html>
-<script src='.__PUBLIC__/assets/js/jquery-2.1.0.js'></script>
+<script src='__PUBLIC__/assets/js/jquery-2.1.0.js'></script>
+<script>
+    var loadingdelay = false;  // 此处参数是判断是否重复的请求 避免数据多加载
+    var fromnum = "{$lastnum}";
+    $(window).on("scroll", function(event) {
+        var h = $(document).height();
+        var wh = $(window).height();
+        if ($(window).scrollTop() >= h - wh - 100 && !loadingdelay) {
+            loadingdelay = true;
+			$.ajax({
+				type: "POST",
+				url:"{:U('Index/get_index_list')}",
+				cache:false,
+				data:{fromnum:fromnum},
+				dataType:'json',
+				success: function(data) {
+					console.log(data.list)
+					if(data.list.length <= 0) {
+					    alert('已经到底了')
+					    return
+					}
+					for(i=0;i < data.list.length;i++) {
+                        var imgs = '';
+                        for(j=0;j < data.list[i].cover.length;j++) {
+					        imgs += '<div class="item_img"><img src="/'+data.list[i].cover[j]+'" alt=""></div>';
+						}
+                        $('.index_box').append('<a class="index_item" href="/Home/Index/detail/id/'+data.list[i].id+'.html"><div class="index_item_title">'+data.list[i].title+'</div><div class="index_item_imgs">' + imgs + '</div><div class="read_person">'+data.list[i].pv+'人阅读</div></a>')
+                    }
+                    fromnum = data.fromnum
+                    loadingdelay = false;
+				}
+        	});
+
+        }
+    });
+</script>
