增加了message错误提示页

--- a/Application/Home/View/Index/others.html
+++ b/Application/Home/View/Index/others.html
@@ -62,7 +62,7 @@
             loadingdelay = true;
             $.ajax({
                 type: "POST",
-                url:"{:U('Index/get_index_list')}",
+                url:"{:U('Index/get_others_list')}",
                 cache:false,
                 data:{fromnum:fromnum},
                 dataType:'json',
