--- a/Application/Admin/View/Login/index.html
+++ b/Application/Admin/View/Login/index.html
@@ -17,11 +17,16 @@
             <form action="{:U('Login/login')}" class="panel-body wrapper-lg" method="post">
                 <div class="form-group">
                     <label class="control-label">用户名</label>
-                    <input type="text" name="username" placeholder="请输入账号" class="form-control input-lg" value="{$shandayidao_username}">
+                    <input type="text" name="username" placeholder="请输入账号" class="form-control input-lg" value="{$shandayidao_username}" required>
                 </div>
                 <div class="form-group">
                     <label class="control-label">密码</label>
-                    <input type="password" name="password" placeholder="请输入密码" class="form-control input-lg" value="{$shandayidao_pwd}" >
+                    <input type="password" name="password" placeholder="请输入密码" class="form-control input-lg" value="{$shandayidao_pwd}" required>
+                </div>
+                <div class="form-group">
+                    <label class="control-label"></label>
+                    <input type="text" name="login_vcode" placeholder="输入验证码" class="form-control input-lg" style="width: 40%;display: inline-block;" value="" required>
+                    <img id="img" style="width: 55%;display: inline-block" src="{:U('Login/verifyCode')}" onclick="Code()">
                 </div>
                 <div class="checkbox">
                     <label>
@@ -36,6 +41,12 @@
         </section>
     </div>
 </section>
+<script>
+
+    function Code() {
+        document.getElementById("img").src="{:U('Login/verifyCode')}?"+Math.random();
+    }
+</script>
 <!-- footer -->
 <footer id="footer">
     <div class="text-center padder clearfix">
