--- a/Application/Admin/View/Content/modArticle.html
+++ b/Application/Admin/View/Content/modArticle.html
@@ -66,7 +66,7 @@
                 </foreach>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">上传图片(最多3张)</label>
+                <label class="col-sm-2 control-label">上传图片(最多3张,建议220*220)</label>
                 <div class="col-sm-10">
                     <div class="reveal-box">
                         <div id="waterfall" class="waterfall">
