--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -72,7 +72,7 @@
 				success: function(data) {
 					console.log(data.list)
 					if(data.list.length <= 0) {
-					    alert('已经到底了')
+					    // alert('已经到底了')
 					    return
 					}
 					for(i=0;i < data.list.length;i++) {
