修改了几个字问题

--- a/Application/Home/View/Index/company.html
+++ b/Application/Home/View/Index/company.html
@@ -25,15 +25,14 @@
 				.company_img img{
 						width: 100%;
 				}
+				.company p img{width: 100%!important;height: auto!important;}
+
 		</style>
 </head>
 <body>
 <!--<div class='company_img'>-->
 		<!--<img src="__PUBLIC__/assets/images/company.png" alt="">-->
 <!--</div>-->
-<style>
-	p img{width: 100%!important;height: auto!important;}
-</style>
 <div class='company'>
 	{$info.profile|htmlspecialchars_decode}
 </div>
