--- a/Application/Home/View/Index/others.html
+++ b/Application/Home/View/Index/others.html
@@ -5,7 +5,7 @@
 		<meta name="viewport"
 		      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>其他咨询</title>
+		<title>其他资讯</title>
 		<script src='__PUBLIC__/assets/js/public_fz.js'></script>
 		<link rel="stylesheet" href="__PUBLIC__/assets/css/public_reset.css">
 		<link rel="stylesheet" href="__PUBLIC__/assets/css/public_common.css">
